[tool.poetry]
name = "dpg-calc"
version = "0.1.0"
description = ""
authors = ["Kalinka George <xitowzys@gmail.com>"]
readme = "README.md"
packages = [{include = "dpg_calc"}]

[tool.poetry.dependencies]
python = "^3.11"
dearpygui = "^1.8.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
